# radar-rs-analyst

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/app_ui/: Cargo.toml
crates/app_ui/src/: lib.rs  main.rs
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/color_tables/: Cargo.toml
crates/color_tables/src/: lib.rs
crates/data_source/: Cargo.toml
crates/data_source/examples/: probe_sources.rs
crates/data_source/src/: lib.rs
crates/nexrad_io/: Cargo.toml
crates/nexrad_io/examples/: bench_decode.rs  inspect.rs
crates/nexrad_io/src/: lib.rs
crates/product_engine/: Cargo.toml
crates/product_engine/src/: lib.rs
crates/radar_core/: Cargo.toml
crates/radar_core/src/: lib.rs
crates/render2d/: Cargo.toml
crates/render2d/examples/: bench_render.rs  multisite_profile.rs  perf_probe.rs  render_reflectivity_png.rs  velocity_event_probe.rs  visual_probe.rs
crates/render2d/src/: lib.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/timeline/: Cargo.toml
crates/timeline/src/: lib.rs
tools/: generate_basemap_data.py
