[package]
name = "app_ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
data_source = { path = "../data_source" }
eframe.workspace = true
nexrad_io = { path = "../nexrad_io" }
radar_core = { path = "../radar_core" }
render2d = { path = "../render2d" }

[dev-dependencies]
chrono.workspace = true

[[bin]]
name = "radar-rs-analyst"
path = "src/main.rs"
