[package]
name = "app_ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
color_tables = { path = "../color_tables" }
data_source = { path = "../data_source" }
eframe.workspace = true
nexrad_io = { path = "../nexrad_io" }
radar_core = { path = "../radar_core" }
render2d = { path = "../render2d" }
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "radar-rs-analyst"
path = "src/main.rs"
